<resources>
    <string name="app_name">MyRecipeBook</string>
    <string name="title">Title:</string>
    <string name="prep_time">Prep. time:</string>
    <string name="rate">Rate:</string>
    <string name="max_value">/10</string>
    <string name="ingredients">Ingredients:</string>
    <string name="long_dash">—</string>
    <string name="link_to_recipe">Link to recipe:</string>
    <string name="recipe">Recipe:</string>
    <string name="input_cannot_be_empty">Input cannot be empty</string>
    <string name="invalid_input">Invalid input</string>
    <string name="do_you_want_to_delete_recipe">Do you want to delete recipe?</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
</resources>