<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="28dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middle_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/title_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/title"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.jakubaniola.myrecipebook.customviews.TextField
                android:id="@+id/name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="@id/title_label_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/title_label_text_view"
                app:layout_constraintTop_toTopOf="@id/title_label_text_view"
                app:textFieldTextSize="@dimen/text_size_xlarge" />

            <com.jakubaniola.pickphotoview.PickPhotoLayout
                android:id="@+id/pick_result_photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_label_text_view"
                app:mode="ENABLE_ADD_ONE" />

            <TextView
                android:id="@+id/prep_time_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/prep_time"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pick_result_photo_layout" />

            <com.jakubaniola.myrecipebook.customviews.TextField
                android:id="@+id/prep_time_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="@id/prep_time_label_text_view"
                app:layout_constraintEnd_toEndOf="@id/middle_guideline"
                app:layout_constraintStart_toEndOf="@id/prep_time_label_text_view"
                app:layout_constraintTop_toTopOf="@id/prep_time_label_text_view"
                app:textFieldTextSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/rate_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/rate"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="@id/middle_guideline"
                app:layout_constraintTop_toBottomOf="@id/pick_result_photo_layout" />

            <com.jakubaniola.myrecipebook.customviews.TextField
                android:id="@+id/rate_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@id/rate_label_text_view"
                app:layout_constraintEnd_toStartOf="@id/rate_max_label_text_view"
                app:layout_constraintStart_toEndOf="@id/rate_label_text_view"
                app:layout_constraintTop_toTopOf="@id/rate_label_text_view"
                app:textFieldTextSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/rate_max_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/max_value"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="@id/rate_label_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rate_edit_text"
                app:layout_constraintTop_toBottomOf="@id/title_label_text_view"
                app:layout_constraintTop_toTopOf="@id/rate_label_text_view" />

            <TextView
                android:id="@+id/ingredients_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/ingredients"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prep_time_label_text_view" />

            <com.jakubaniola.myrecipebook.customviews.IngredientsListView
                android:id="@+id/ingredient_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredients_label_text_view" />

            <TextView
                android:id="@+id/link_to_recipe_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/link_to_recipe"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredient_list_view" />

            <com.jakubaniola.myrecipebook.customviews.TextField
                android:id="@+id/link_to_recipe_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_to_recipe_label_text_view"
                app:textFieldTextSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/recipe_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/recipe"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_to_recipe_edit_text" />

            <com.jakubaniola.myrecipebook.customviews.TextField
                android:id="@+id/recipe_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="top | start"
                android:inputType="textMultiLine"
                android:lines="1"
                android:maxLines="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_label_text_view"
                app:textFieldTextSize="@dimen/text_size_large" />

            <com.jakubaniola.pickphotoview.PickPhotoLayout
                android:id="@+id/pick_recipe_photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_edit_text"
                app:mode="ENABLE_ADD_MULTIPLE" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/fab_image_view"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom | end"
        android:layout_margin="32dp"
        android:background="@drawable/fab_background"
        android:elevation="4dp"
        android:padding="@dimen/fab_padding"
        android:src="@drawable/ic_check" />

</FrameLayout>