<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="28dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middle_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/text_size_xxlarge"
                android:textColor="@color/colorTextDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.jakubaniola.pickphotoview.PickPhotoLayout
                android:id="@+id/pick_result_photo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_text_view"
                app:mode="ONLY_SHOW" />

            <TextView
                android:id="@+id/prep_time_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/prep_time"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pick_result_photo_layout" />

            <TextView
                android:id="@+id/prep_time_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="@dimen/text_size_large"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorTextDark"
                app:layout_constraintBottom_toBottomOf="@id/prep_time_label_text_view"
                app:layout_constraintEnd_toEndOf="@id/middle_guideline"
                app:layout_constraintStart_toEndOf="@id/prep_time_label_text_view"
                app:layout_constraintTop_toTopOf="@id/prep_time_label_text_view" />

            <TextView
                android:id="@+id/rate_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/rate"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="@id/middle_guideline"
                app:layout_constraintTop_toBottomOf="@id/pick_result_photo_layout" />

            <TextView
                android:id="@+id/rate_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="@dimen/text_size_large"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorTextDark"
                app:layout_constraintBottom_toBottomOf="@id/rate_label_text_view"
                app:layout_constraintStart_toEndOf="@id/rate_label_text_view"
                app:layout_constraintTop_toTopOf="@id/rate_label_text_view" />

            <TextView
                android:id="@+id/rate_max_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/max_value"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="@id/rate_label_text_view"
                app:layout_constraintStart_toEndOf="@id/rate_text_view"
                app:layout_constraintTop_toTopOf="@id/rate_label_text_view" />

            <TextView
                android:id="@+id/ingredients_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/ingredients"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rate_max_label_text_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredients_label_text_view" />

            <TextView
                android:id="@+id/link_to_recipe_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/link_to_recipe"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredients_recycler_view" />

            <TextView
                android:id="@+id/link_to_recipe_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorUrl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_to_recipe_label_text_view" />

            <TextView
                android:id="@+id/recipe_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/recipe"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_to_recipe_text_view" />

            <TextView
                android:id="@+id/recipe_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorTextDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_label_text_view" />

            <com.jakubaniola.pickphotoview.PickPhotoLayout
                android:id="@+id/pick_recipe_photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:mode="ONLY_SHOW"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/edit_recipe_fab_image_view"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom | end"
        android:layout_margin="32dp"
        android:background="@drawable/fab_background"
        android:elevation="4dp"
        android:padding="@dimen/edit_fab_padding"
        android:src="@drawable/ic_edit" />

</FrameLayout>